Fix: Intro: Alignment for xs screens
We only need padding on col-xs elements
to be in effect when the screen is the
small enough for it to matter -- otherwise
it makes the layout look worse.

--- a/web/public/css/curtain.css
+++ b/web/public/css/curtain.css
@@ -104,7 +104,18 @@ p {
     color: gold !important;
 }
 
-.col-xs-12 {
-    padding-left: 2em;
-    padding-right: 2em;
+/* xs-screens only */
+@media (max-width: 757px) {
+    .col-xs-12 {
+        padding-left: 2em;
+        padding-right: 2em;
+    }
+
+    .for-glyph {
+        max-width: 300px;
+    }
+
+    .third .info {
+        margin-top: 1.1em;
+    }
 }
